force-app/main/default/objects/Fule_sale_trans__c/Fule_sale_trans__c.object-meta.xml
<CustomObject>
    <label>Fule sale trans</label>
    <nameField>
        <displayFormat>T-{00}</displayFormat>
        <label>Transaction id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fule sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>