force-app/main/default/objects/Fule_sale_trans__c/fields/BankMaster__c.field-meta.xml
<CustomField>
    <fullName>BankMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BankMaster</label>
    <referenceTo>BankMaster__c</referenceTo>
    <relationshipLabel>Fule sales</relationshipLabel>
    <relationshipName>Fule_sales</relationshipName>
    <type>Lookup</type>
</CustomField>