force-app/main/default/objects/Fule_sale_trans__c/fields/chalanno__c.field-meta.xml
<CustomField>
    <fullName>chalanno__c</fullName>
    <label>chalanno</label>
    <referenceTo>Fuel_store__c</referenceTo>
    <relationshipLabel>Fule sales</relationshipLabel>
    <relationshipName>Fule_sales</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>