force-app/main/default/objects/Fule_sale_trans__c/fields/Date_of_Transcation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transcation__c</fullName>
    <label>Date of Transcation</label>
    <type>Date</type>
</CustomField>