force-app/main/default/objects/Fule_sale_trans__c/fields/Employeeno__c.field-meta.xml
<CustomField>
    <fullName>Employeeno__c</fullName>
    <label>Employeeno</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Fule sales</relationshipLabel>
    <relationshipName>Fule_sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>