force-app/main/default/objects/Fule_sale_trans__c/fields/Net_amount__c.field-meta.xml
<CustomField>
    <fullName>Net_amount__c</fullName>
    <label>Net amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>