force-app/main/default/objects/Fule_sale_trans__c/fields/netamt__c.field-meta.xml
<CustomField>
    <fullName>netamt__c</fullName>
    <formula>Purchase_in_ltr__c  *  chalanno__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>netamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>