force-app/main/default/objects/Fule_sale_trans__c/fields/petrol__c.field-meta.xml
<CustomField>
    <fullName>petrol__c</fullName>
    <formula>Net_amount__c  /  chalanno__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>petrol in ltr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>