force-app/main/default/objects/Fule_sale_trans__c/fields/Purchase_in_ltr__c.field-meta.xml
<CustomField>
    <fullName>Purchase_in_ltr__c</fullName>
    <label>Purchase in ltr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>