force-app/main/default/objects/Fule_sale_trans__c/recordTypes/enter_the_amount_in_dollars.recordType-meta.xml
<RecordType>
    <fullName>enter_the_amount_in_dollars</fullName>
    <active>true</active>
    <label>enter the amount in dollars</label>
</RecordType>